Fix navigation issue
The hidden submenus spill outside of the container at smaller screens
because of the width specified. This shouldn't really be an issue unless
one manually shrinks the viewport. Regardless, adding overflow:hidden to
the body to prevent that.

Mobile navigation issue solved by removing the overlay's 100vw.

--- a/assets/sass/components/navigation/_mobile.scss
+++ b/assets/sass/components/navigation/_mobile.scss
@@ -5,7 +5,7 @@
 
 .menu-overlay {
   $tt: .4s;
-  @apply flex flex-col justify-center items-center absolute pin w-screen bg-primary z-50 h-0 opacity-0 invisible;
+  @apply flex flex-col justify-center items-center absolute pin bg-primary z-50 h-0 opacity-0 invisible;
   transition: opacity $tt, visibility $tt, height $tt;
 
   &.is-active {
